syntax = "proto3";

package project.planton.provider.kubernetes.workload.temporalkubernetes.v1;

import "buf/validate/validate.proto";
import "project/planton/provider/kubernetes/workload/temporalkubernetes/v1/spec.proto";
import "project/planton/provider/kubernetes/workload/temporalkubernetes/v1/stack_outputs.proto";
import "project/planton/shared/metadata.proto";
import "project/planton/shared/status.proto";

//temporal-kubernetes
message TemporalKubernetes {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'kubernetes.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'TemporalKubernetes'];

  //metadata
  project.planton.shared.ApiResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  TemporalKubernetesSpec spec = 4 [(buf.validate.field).required = true];

  //status
  TemporalKubernetesStatus status = 5;
}

//temporal-kubernetes status.
message TemporalKubernetesStatus {
  //stack-outputs
  TemporalKubernetesStackOutputs outputs = 1;
}
